Fix leftover layout issues

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -107,7 +107,7 @@
               z-index: 1;   
 
               @media (max-width: 1199px) {
-                top: 15px; 
+                top: 29px; 
               }
             }
           }
