--- a/src/styles/PlanetPage.scss
+++ b/src/styles/PlanetPage.scss
@@ -54,7 +54,7 @@ p{
     grid-template-areas:
       "planet-image"
       "planet-info";
-    margin: 4.5rem auto;
+    margin: 4.5rem auto 1.5rem auto;
   }
 
   .image-section {
@@ -87,6 +87,9 @@ p{
 @media (max-width: 1200px) {
   body {
     padding: 0 5rem;
+  }
+  .grid-container {
+    margin: 4.5rem auto 0 auto;
   }
 }
 
