--- a/src/styles/TabView.scss
+++ b/src/styles/TabView.scss
@@ -5,13 +5,14 @@ button {
   background-color: transparent;
   border: 1px solid hsl(240, 17%, 26%);
   display: flex;
-  gap: 30px;
   align-items: center;
   color: hsla(0, 0%, 100%, 0.75);
 
   @media screen and (max-width: 900px) {
     font-size: 0.5625rem;
     line-height: 0.625rem;
+    justify-content: center;
+    transition: none;
   }
 
   &:hover {
@@ -43,7 +44,7 @@ button.active {
 }
 
 button p {
-  margin: auto 0;
+  margin: auto 1.5rem auto 0;
   color: hsla(0, 0%, 100%, 0.75);
 
   @media (max-width: 900px) {
@@ -55,6 +56,14 @@ button span {
   @media screen and (max-width: 900px) {
     display: none;
   }
+}
+
+button .internal {
+  padding: 0 0.5rem 0 0;
+}
+
+button .geology {
+  padding: 0 0 0 0.5rem;
 }
 
 .tab-buttons {
@@ -86,9 +95,7 @@ button span {
   border: 1px solid hsl(240, 17%, 26%);
   color: hsla(0, 0%, 100%, 0.75);
   display: flex;
-  gap: 30px;
   align-items: center;
-  justify-content: center;
   text-align: center;
   transition: background-color 0.3s ease;
 
@@ -100,6 +107,7 @@ button span {
   @media (max-width: 900px) {
     padding: 0;
     border: none;
+    transition: none;
   }
 }
 
@@ -115,26 +123,22 @@ button span {
 .tab-content {
   margin-bottom: 40px;
   color: hsla(0, 0%, 100%, 0.75);
+
+  @media screen and (max-width: 900px) {
+    margin-bottom: 20px;
+  }
 }
 
 .source {
   display: flex;
   flex-direction: row;
-  justify-content: center;
 
   @media screen and (max-width: 900px){
-    position: absolute;
-    left: 40%;
-    bottom: 0.5rem;
+    justify-content: center;  
   }
 
   @media screen and (max-width: 600px){
     font-size: 0.6875rem;
-    left: 36%;
-  }
-
-  @media screen and (max-width: 450px){
-    left: 30%;
   }
 
   p {
